# interval_matrix_profile

./: .gitignore  CMakeLists.txt  README.md  clang-format  cosine.py  distance.hpp  environment.yml  imp_parallel  interval_pavement.py  main.cpp  matrix_profile.hpp  mp.py  para_stomp.txt  para_stomp_speedup.txt  pavement.py  test.cpp  utils.hpp
Data/: era5_daily_series_sst_60S-60N_ocean.csv  index_profile_bf.txt  index_profile_stomp.txt  index_profile_stompv2.txt  matrix_profile_bf.txt  matrix_profile_stomp.txt  matrix_profile_stompv2.txt  mp_sst.txt  seasons_sst_1.txt  smp_ind_sst.npy  smp_ind_sst.txt  smp_sst.npy  smp_sst.txt  ts_sst.txt
Data/ERA5_land/: Bordeaux_t2m_daily_avg_1950_2023.nc  daily_series.txt  periods_start_daily.txt  periods_start_hourly.txt  process_nc_to_txt.py  seasons_daily_0.txt  seasons_daily_1.txt  seasons_daily_2.txt  seasons_daily_3.txt  seasons_hourly_0.txt  seasons_hourly_1.txt  seasons_hourly_2.txt  seasons_hourly_3.txt
Data/ERA5_land/daily_outputs/: imp_stomp.txt  imp_stomp_ep.txt  imp_stomp_index.txt  imp_stomp_kNN.txt  imp_stomp_kNN_index.txt  mp_bf_index.txt  mp_stomp.txt  plot.py  smp_stomp.txt  smp_stomp_index.txt
Data/ERA5_land/hourly_outputs/: plot.py
Data/SST/: mediterranean_sst.npy  mediterranean_ts_date.npy
Data/climate_pulse/: process.py
Data/climate_pulse/SST/: 2024_era5_daily_series_sst_60S-60N_ocean.csv  daily_series.npy  daily_series.txt  daily_series_date.npy
Data/climate_pulse/T2M/: daily_series.npy  daily_series.txt  daily_series_date.npy  era5_daily_series_2t_global.csv  periods_start_daily.txt
Data/tests/: periods_start_sst.txt  seasons_sst_0.txt  seasons_sst_2.txt  seasons_sst_3.txt  ts_sst.txt
experiments/: CMakeLists.txt  blocks.gp  climate_comparison.cpp  climate_pulse_imp.cpp  computation_comparison.cpp  computation_times.txt  imp_time_comparison.cpp  k_nn_time.cpp  numerical_error.cpp
notebooks/: Benchmark.ipynb  Untitled.ipynb  climate_pulse_SST_2024.ipynb  imp.npy  parameter_sensibility.ipynb  pc-guidelines-15aug03.doc  power_consumption.ipynb  synth.ipynb
scripts/: all.sh  bf.txt  bf_speedup.txt  efficiency_compute.py  imp_interval_impact.sh  imp_k_impact.sh  imp_m_impact.sh  imp_parallel.sh  imp_period_length_impact.sh  imp_year_impact.sh  k_nn_exclusion_var.sh  k_nn_kvar.sh  meta_script.sh  nef.sh  slope_compute.py  speed_experiments.sh  speed_plot.gp  speedup.gp  speedup.sh  stomp.txt  stomp_speedup.txt
scripts/gnuplots/: imp_interval_impact.gp  imp_m_impact.gp  imp_parallel.gp  imp_parallel_pp.gp  imp_period_length_impact.gp  imp_year_impact.gp  knn_exclusion_var.gp  knn_var.gp
scripts/output_files/: imp_interval_impact_bf.txt  imp_interval_impact_block.txt  imp_interval_impact_stomp.txt  imp_k_impact_block.txt  imp_m_impact_bf.txt  imp_m_impact_block.txt  imp_m_impact_stomp.txt  imp_year_impact_bf.txt  imp_year_impact_block.txt  imp_year_impact_stomp.txt  k_nn_exclusion_var_heap.txt  k_nn_exclusion_var_sweep.txt  k_nn_kvar_heap.txt  k_nn_kvar_sweep.txt
src/: CMakeCache.txt  CMakeLists.txt  bimb_knn.hpp  bimp.hpp  block copy.hpp  block.hpp  block_kNN.hpp  distance.hpp  dtw.hpp  gen_block.hpp  ilof.hpp  interval_matrix_profile.hpp  k_nn.cpp  k_nn_lookup.hpp  main.cpp  matrix_profile.hpp  outer_bimp.hpp  pybind_module.cpp  seasonal_matrix_profile.hpp  square_block.hpp  toto.cpp  utils.hpp  vblock.hpp
tests/: CMakeLists.txt  test_block.cpp  test_interval_mp.cpp  test_mp.cpp  test_outer.cpp  test_seasonal_mp.cpp  test_utils.hpp
